--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,9 @@
   <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/grids-responsive-min.css">
   <link rel="stylesheet" href="{{ 'assets/styles.css' | relative_url }}">
-
+  {% unless page.no_latex %}
+  {% include latex.html %}
+  {% endunless %}
   {%- seo -%}
   {%- feed_meta -%}
 
